--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ install:
   - pip install flake8
   - pip install flake8_docstrings
   - pip install nose
+  - pip pep8-naming
 script:
   - nosetests .
   - flake8 .
