--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ python:
   - "3.3"
 install:
   - pip install flake8
-  - pip install flake8_docstrings
+  - pip install flake8-docstrings
   - pip install nose
   - pip install pep8-naming
+  - pip install flake8-putty
 script:
   - nosetests .
   - flake8 .
