Prep for 2.3.0 release
- Update doc theme and structure
- Deploy docs on release
- Limit tooltips to 3124+
- Add spelling check

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,5 @@
 [flake8]
-ignore=D202,D203
+ignore=D202,D203,D401
 max-line-length=120
+exclude=site/*.py
 putty-ignore=lib/calendarevents/__init__.py : +E731
