--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-ignore=D202,D203,D401
+ignore=D202,D203,D401,W504
 max-line-length=120
 exclude=site/*.py
 putty-ignore=lib/calendarevents/__init__.py : +E731
