--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,8 +4,9 @@ repo_url: https://github.com/facelessuser/QuickCal
 edit_uri: tree/master/docs/src/markdown
 site_description: Sublime Plugin that shows a quick month calender.
 copyright: |
-  Copyright &copy; 2012 - 2017 <a href="https://github.com/facelessuser">Isaac Muse</a>
-  <br><span class="md-footer-custom-text">emoji provided free by </span><a href="http://www.emojione.com">EmojiOne</a>
+  Copyright &copy; 2012 - 2019 <a href="https://github.com/facelessuser">Isaac Muse</a>
+  <br><span class="md-footer-custom-text">emoji provided free by </span>
+  <a href="https://github.com/twitter/twemoji">Twemoji</a>
 
 docs_dir: docs/src/markdown
 theme:
@@ -57,7 +58,7 @@ markdown_extensions:
   - pymdownx.caret:
   - pymdownx.smartsymbols:
   - pymdownx.emoji:
-      #emoji_index: !!python/name:pymdownx.emoji.twemoji
+      emoji_index: !!python/name:pymdownx.emoji.twemoji
       emoji_generator: !!python/name:pymdownx.emoji.to_png
   - pymdownx.escapeall:
       hardbreak: true
@@ -77,6 +78,6 @@ extra:
     - type: github
       link: https://github.com/facelessuser
 extra_css:
-  - extra-f8303dea60.css
+  - extra-174a536342.css
 extra_javascript:
-  - extra-d8800ea088.js
+  - extra-0d9305e748.js
