Update out of date things in project

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 skipsdist=True
 envlist =
-    py35,py36,py37,lint
+    py39,py310,py311,py312,py313,lint
 
 [testenv]
 deps=
@@ -11,12 +11,9 @@ commands=
 
 [testenv:documents]
 deps=
-    pyspelling
-    mkdocs-material
-    pymdown-extensions
-    pygments
+    -r docs/src/requirements.txt
 commands=
-    mkdocs build --clean --verbose --strict
+    "{envpython}" -m mkdocs build --clean --verbose --strict
     pyspelling
 
 [testenv:lint]
