--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,15 +12,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python
-      uses: actions/setup-python@v1
+    - uses: actions/checkout@v4
       with:
-        python-version: 3.7
+        fetch-depth: 0
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip setuptools
-        python -m pip install mkdocs-material pymdown-extensions pygments
+        python -m pip install --upgrade pip setuptools build
+        python -m pip install -r docs/src/requirements.txt
     - name: Deploy documents
       run: |
         git config user.name facelessuser
